# driplab

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  wardrobe.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py
backend/app/models/: __init__.py  conversation.py  garment.py  garment_label.py  garment_prediction.py  message.py  outfit.py  outfit_feedback.py  user.py  user_preferences.py
backend/app/schemas/: garment.py
backend/app/services/: __init__.py  storage.py
backend/tests/api/: test_wardrobe_crud.py  test_wardrobe_upload.py
backend/tests/services/: test_storage.py
data/: README.md
docs/: ARCHITECTURE.md  CHATBOT.md  DATABASE.md  GIT_WORKFLOW.md  ML_PIPELINE.md  PROJECT_PLAN.md
docs/tasks/: BACKEND.md  FRONTEND.md  INFRA.md  ML.md  README.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/upload/: page.tsx
frontend/app/wardrobe/: page.tsx
frontend/components/upload/: DropZone.tsx  UploadPreview.tsx  UploadProgress.tsx
frontend/components/wardrobe/: FilterBar.tsx  GarmentCard.tsx  GarmentGrid.tsx
frontend/hooks/: useWardrobe.ts
frontend/lib/: upload.ts
frontend/types/: garment.ts
infrastructure/docker/: docker-compose.yml
ml/chatbot/: __init__.py
ml/ingestion/: __init__.py  preprocessing.py  quality_check.py
ml/tests/: test_preprocessing.py  test_quality_check.py
ml/utils/: image_utils.py
model_artifacts/: README.md
