[project]
name = "fashion-app"
version = "0.1.0"
description = "Wardrobe management and outfit recommendation app powered by ML"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
start-api = "uvicorn backend.app.main:app"

[tool.poetry]
packages = [
    { include = "backend" },
    { include = "ml" },
]

[tool.poetry.dependencies]
python = "^3.10"

# Backend dependencies
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
rq = "^1.15.1"

# ML dependencies (Phase 2, but setting up structure)
# torch = { version = "^2.1.0", source = "pytorch" }
# torchvision = { version = "^0.16.0", source = "pytorch" }
# ultralytics = "^8.1.0"
# transformers = "^4.35.0"
# sentence-transformers = "^2.2.2"
# chromadb = "^0.4.18"
# pillow = "^10.1.0"
# numpy = "^1.26.2"
# openai = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests", "ml/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
